k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-devops-platform
  labels:
    app: eks-devops-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-devops-platform
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: eks-devops-platform
    spec:
      containers:
        - name: eks-devops-platform
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 20
