k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-devops-platform
spec:
  type: ClusterIP
  selector:
    app: eks-devops-platform
  ports:
    - name: http
      port: 80
      targetPort: 8080
